# gijiroku-search

./: .gitignore  CLAUDE.md  README.md  WORKTREE_GUIDE.md
.claude/: directory-structure.md
.github/: CODEOWNERS  README.md  branch-protection.md  (+5 more)
scripts/uv-data-collection/: Dockerfile  alternative_sources_collector.py  analyze_go2senkyo_structure.py  check_data_growth.py  clean_candidate_data.py  clean_data_final.py  collect_all_47_prefectures.py  collect_all_candidate_links.py  collect_all_prefectures.py  collect_bills_enhanced.py  collect_bills_fixed.py  collect_bills_table_based.py  collect_candidate_links.py  collect_candidate_links_fixed.py  collect_committee_news_correct.py  collect_committee_news_enhanced.py  collect_committee_news_fixed.py  collect_go2senkyo_enhanced.py  collect_go2senkyo_optimized.py  collect_major_prefectures.py  collect_proportional.py  collect_proportional_v2.py  collect_questions_enhanced.py  collect_questions_fixed.py  collect_questions_incremental.py  collect_questions_real.py  collect_real_manifestos.py  collect_sangiin_2025_candidates.py  collect_sangiin_bills.py  collect_shugiin_legislators.py  collect_tokyo_save_data.py  collection_speed_optimizer.py  complete_go2senkyo_collection.py  comprehensive_data_fix.py  convert_sangiin_csv_to_json.py  daily_data_collection.py  data_deduplication_tool.py  data_processing_pipeline.py  debug_extraction.py  debug_headers_detailed.py  (+39 more)
scripts/uv-data-collection/data/: last_processed.json
scripts/uv-data-collection/debug/: asahi_page.html  nhk_page.html  www.soumu.go.jp_senkyo_senkyo_s_.html
(+294 files in other folders)
