[project]
name = "uv-data-collection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fake-useragent>=2.2.0",
    "requests>=2.32.4",
    "requests-ip-rotator>=1.0.14",
    "python-dateutil>=2.8.2",
]
